# pobyaryan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/pobyaryan/: __init__.py  agent.py  cli.py
src/pobyaryan/CMDTOOL/: appendTOfile.py  createfile.py  createfolder.py  deletePath.py  executeCommand.py
